Create gitlab ci module
This commit creates a new module that is capable of installing a gitlab
CI configuration file, more specifically the .gitlab-ci.yml.

This CI configuration will compile the latex template on push into a
final output pdf file and publish this as a job artifact.

--- a/.internal/modules/github-workflow/compile.yml
+++ b/.internal/modules/github-workflow/compile.yml
@@ -5,7 +5,7 @@ jobs:
 
     name: Compile LaTeX to PDF
     runs-on: ubuntu-latest
-    container: tianon/latex
+    container: aergus/latex
 
     steps:
       - name: Checkout the repository code
@@ -17,8 +17,11 @@ jobs:
       - name: Compile the master file
         run: shell_escape=t latexmk -pdf -jobname=./output/build master.tex;
 
+      - name: Copy compiled output pdf
+        run: cp output/build.pdf master.pdf
+
       - name: Upload compiled pdf file as artifact
         uses: actions/upload-artifact@v1
         with:
           name: master
-          path: ./output/build.pdf
+          path: master.pdf
