--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,10 @@ jobs:
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v2
-      # - name: Compile LaTeX document
-      #   uses: dante-ev/latex-action@master
-      #   with:
-      #     root_file: master.tex
+      - name: Compile LaTeX document
+        uses: dante-ev/latex-action@master
+        with:
+          root_file: master.tex
       - name: Run local changes
         run: |
           sudo apt-get install python3-setuptools
