--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,28 +16,29 @@ jobs:
           name: output
           path: master.pdf
   update_readme:
-      needs: build_latex
-      steps:
-        - name: Checkout Git Repo
-          uses: actions/checkout@v2
-        - name: Download Artifact
-          uses: actions/download-artifact@v1
-          with:
-            name: output
-            path: .
-        - name: Run local changes
-          run: |
+    runs-on: ubuntu-latest
+    needs: build_latex
+    steps:
+      - name: Checkout Git Repo
+        uses: actions/checkout@v2
+      - name: Download Artifact
+        uses: actions/download-artifact@v1
+        with:
+          name: output
+          path: .
+      - name: Run local changes
+        run: |
             sudo apt-get install python3-setuptools
             cd .internals/scripts/utils
             pip3 install -r requirements.txt
             ./ubuntu_updateLabels.sh
-        - name: Commit files
-          run: |
+      - name: Commit files
+        run: |
             git config --local user.email "action@github.com"
             git config --local user.name "GitHub Action"
             git commit -m "Updated Labels" -a
-        - name: Push changes
-          uses: ad-m/github-push-action@master
-          with:
-            github_token: ${{ secrets.GITHUB_TOKEN }}
-            branch: ${{ github.ref }}
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
