--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
   update_readme:
     runs-on: ubuntu-latest
     needs: build_latex
+    if: "false"
     steps:
       - name: Checkout Git Repo
         uses: actions/checkout@v2
